--- a/packages/stencil/src/components/sd-button/sd-button.scss
+++ b/packages/stencil/src/components/sd-button/sd-button.scss
@@ -21,6 +21,7 @@
  position: relative;
  overflow: hidden;
  white-space: nowrap;
+ -webkit-user-select: none;
  user-select: none;
  box-sizing: border-box;
  &--xs {
