--- a/packages/stencil/src/components/sd-table/sd-table.scss
+++ b/packages/stencil/src/components/sd-table/sd-table.scss
@@ -72,6 +72,7 @@
       font-weight: 500;
       vertical-align: middle;
       border-bottom: 1px solid $grey_30;
+      -webkit-user-select: none;
       user-select: none;
       position: relative;
 
