--- a/packages/stencil/src/components/sd-tag/sd-tag.scss
+++ b/packages/stencil/src/components/sd-tag/sd-tag.scss
@@ -18,6 +18,7 @@
  position: relative;
  overflow: hidden;
  white-space: nowrap;
+ -webkit-user-select: none;
  user-select: none;
  box-sizing: border-box;
 
