--- a/packages/stencil/src/components/sd-input/sd-input.scss
+++ b/packages/stencil/src/components/sd-input/sd-input.scss
@@ -46,6 +46,7 @@
   outline: none;
   background: transparent;
   font-size: inherit;
+  color: $grey_90;
 
   &::placeholder {
    font-size: 12px;
